<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controladores.RegisterActivity"
        android:background="@color/colorBackGround">

    <EditText
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textColor="@color/colorText"
        android:textColorHighlight="@color/colorText"
        android:textColorHint="@color/colorTextHint"
        android:textColorLink="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/nombre"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            android:id="@+id/correo"
            android:gravity="center"
            android:hint="@string/correo"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:textColorLink="@color/colorText"
            android:textColorHighlight="@color/colorText"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/correo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            android:id="@+id/contraseña"
            android:gravity="center"
            android:hint="@string/contraseña"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:textColorLink="@color/colorText"
            android:textColorHighlight="@color/colorText"
            android:singleLine="false"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/contraseña"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            android:id="@+id/edad"
            android:gravity="center"
            android:hint="@string/edad"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:textColorLink="@color/colorText"
            android:textColorHighlight="@color/colorText"/>

    <Button
        android:id="@+id/registrar"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/rounder_corner_button"
        android:ems="10"
        android:onClick="profile"
        android:text="@string/registrar"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edad" />

    <Button
        android:id="@+id/Cargar"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounder_corner_button"
        android:ems="10"
        android:onClick="Cargar"
        android:text="@string/Cargar"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edad" />

    <Button
        android:id="@+id/volver"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounder_corner_button"
        android:ems="10"
        android:onClick="volver"
        android:text="@string/volver"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrar" />

</android.support.constraint.ConstraintLayout>